# zcc

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  conanfile.py
conan/: cmd_clean.py  cmd_fmt.py  cmd_ut.py  convert_encoding.py
llvm/: hello.c  hello.s  llvm.c  llvm.s
src/: main.cpp  zcc.cpp  zcc.h
tool/: CMakeLists.txt
tool/perfect_hash/: CMakeLists.txt  keyword.txt  perfect_hash_generator.cpp  perfect_hash_generator.h  run.cpp  string_hash.h
util/: CMakeLists.txt  util.cpp
util/include/util/: util.h
zcc/: CMakeLists.txt
zcc/include/zcc/: core.h
zcc/src/: CMakeLists.txt
zcc/src/ast/: CMakeLists.txt  declaration_sematic.cpp  expression.cpp  parser.cpp  statement.cpp  statement_structure.cpp  test_expression.cpp  test_statement.cpp  test_tree.cpp
zcc/src/ast/include/ast/: code.h  code_list.h  declaration_sematic.h  expression.h  parser.h  statement.h  statement_structure.h  suffix_stack.h  syntax_error.h  tree.h
zcc/src/cgen/: CMakeLists.txt  REAME.md
zcc/src/cgen/include/cgen/: cgen.h  liveness_analysis.h  register_allocation.h  x86.h
zcc/src/cgen/src/: cgen.cpp  liveness_analysis.cpp  register_allocation.cpp  test_cgen.cpp  x86.cpp
zcc/src/core/: CMakeLists.txt  core.cpp  file_to_string.cpp
zcc/src/core/include/core/: grammar_abstract.h
zcc/src/ir/: CMakeLists.txt  Makefile  debug.ir  hello.ir  ir.md  modified_parser.cpp  test.ir
zcc/src/ir/include/ir/: driver.h  ir.h  type.h
zcc/src/ir/src/: driver.cpp  ir.cpp  ir.lex  ir.y  test_ir  test_ir.cpp  type.cpp
zcc/src/parser/: CMakeLists.txt
zcc/src/parser/include/parser/: parser.hpp
zcc/src/parser/src/: c.lex  c.y  parser.cpp
zcc/src/parser/test/: test_parser.cpp
zcc/src/scan/: CMakeLists.txt  error.h  lexer_automat_base.h  lexer_buffer_adapter.h  lexer_test.txt  run.cpp  test_scan.cpp  token.cpp  token.h
zcc/src/scan/include/scan/: buffer.h  buffer_test.h  convert.h  lexer.h  lexer_automat_impl.h  lexer_test.h  make_terminal.h
zcc/src/symbol/: CMakeLists.txt  run.cpp  symbol.cpp
zcc/src/symbol/include/symbol/: constant.h  label.h  symbol.h  symbol_talbe.h  table.h  table_interface.h  temporary_symbol.h  type_table.h
zcc/src/type/: CMakeLists.txt  qualifier_type.cpp  test_type.cpp  type.cpp  type_check.cpp  type_to_string.cpp
zcc/src/type/include/type/: aggregate_type.h  array_type.h  enum_type.h  function_type.h  pointer_type.h  primitive_type.h  qualifier_type.h  struct_type.h  type.h  type_assert.h  type_check.h  type_metric.h  type_table.h  union_type.h
zcc/src/util/: CMakeLists.txt  test_graph.cpp  test_string_table.cpp  test_table.cpp
zcc/src/util/include/util/: graph.h  scoped_table.h  string_table.h  unscoped_table.h
